tests/js_error/source_locations/expression/binary/shift_right_arithmetic.exp
TypeError: BigInt cannot be converted to number
  ┌ source_locations/expression/binary/shift_right_arithmetic.js:1:3
  |
1 | 1 >> 2n
  |   ^
Stack trace:
  at <global> (source_locations/expression/binary/shift_right_arithmetic.js:1:3)